[package]
name = "sparql-client"
version = "0.1.0"
edition = "2021"
description = "Minimal async SPARQL-over-HTTP client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/observ-ing/sparql-client"
readme = "README.md"
keywords = ["sparql", "rdf", "wikidata", "http", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
