[package]
name = "sparqling"
version = "0.1.0"
edition = "2021"
description = "Minimal async SPARQL-over-HTTP client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/observ-ing/rust-sparqling"
readme = "README.md"
keywords = ["sparql", "rdf", "wikidata", "http", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
# Keep the import path `sparql_client` independent of the published package name.
name = "sparql_client"

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Async sleep for retry backoff
tokio = { version = "1", default-features = false, features = ["time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional: parse xsd:dateTime literals via SparqlValue::as_datetime
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }

[features]
# Enable SparqlValue::as_datetime, which parses RFC 3339 / xsd:dateTime values.
chrono = ["dep:chrono"]
